# multi-agent-design-patterns

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  settings.py
.agent/workflows/: git-commit.md
llm-lab/llm-base/: README.md
llm-lab/llm-base/transformer/fnn/: fnn.py
llm-lab/llm-base/transformer/transformer/: README.md  config.py  data.py  train.py  transformer.py
llm-lab/llm-sft/: README.md
multi-agent-design-patterns/lesson1_ordinary_agent/server/router/: agent.py
multi-agent-design-patterns/lesson1_ordinary_agent/src/: __init__.py
multi-agent-design-patterns/lesson1_ordinary_agent/src/configs/: config.py  models.py
multi-agent-design-patterns/lesson1_ordinary_agent/src/utils/: logger.py
multi-agent-design-patterns/lesson1_ordinary_agent/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
multi-agent-design-patterns/lesson1_ordinary_agent/web/src/: App.vue  main.ts
multi-agent-framework/AgentScope/: README.md
multi-agent-framework/langchain/: README.md
multi-agent-framework/langchain/1-langchain-core/: 1_create_agent.md  1_create_agent.py  README.md
multi_agent_design_patterns/lesson1_ordinary_agent/: README.md  settings.py
multi_agent_design_patterns/lesson1_ordinary_agent/utils/: datetime_utils.py  logger.py
multi_agent_design_patterns/lesson1：supervisor_subagent/: llm.py
multi_agent_design_patterns/lesson1：supervisor_subagent/example/: supervisor.py
multi_agent_design_patterns/model/: model.py  settings.py
multi_agent_framework/AgentScope/: README.md
(+41 files in other folders)
