[project]
name = "multi-agent-design-patterns"
version = "0.1.0"
description = "多智能体的设计模式合集"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pydantic-settings>=2.11.0",
]

[tool.uv.workspace]
members = [
    "example",
]
