[project]
name = "multi-agent-design-patterns"
version = "0.1.0"
description = "多智能体的设计模式合集"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "deepagents>=0.4.3",
    "langchain>=1.2.0",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
]

[tool.uv.workspace]
members = [
    "example",
]
